@@ -1,0 +1,12 @@
+# coding='utf-8'
+# Author:Tang Hongzhen
+# Email: tanghongzhen34@gmail.com
+# %% 
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+import seaborn as sns
+from matplotlib import rcParams
+
+config = {"font.family": 'Microsoft YaHei', 'pdf.fonttype': 42}
+rcParams.update(config)
